# Schwab-trader

./: .env.example  .env.test  .gitignore  MANIFEST.in  README.md  Stock folder.old  auth_app.py  auto_git_push.sh  backup_project.py  create_db.py  current_requirements.txt  example_strategies.py  main.py  manage.py  models.py  nohup.out  pyproject.toml  requirements-test.txt  requirements.txt  restart_server.sh  run.py  schwab_portfolio.csv  setup.py  setup_backup_cron.sh  sorted_requirements.txt  start.sh  start_server.sh  strategy_tester.py  test_apis.py  test_app.py  test_imports.py  test_portfolio.csv  test_strategies.py  wsgi.py
chrome_profile/: DevToolsActivePort  Local State  SingletonCookie  SingletonLock  SingletonSocket
dashboard/: admin.py  context_processors.py  forms.py  models.py  urls.py  utils.py  views.py
docs/: configuration.md  configuration_migration.md  configuration_troubleshooting.md
examples/: backtest_strategy.py  test_schwab_oauth.py
instance/: config.py
schwab_trader/: .env.test  __init__.py  asgi.py  auth.py  auth_app.py  cli.py  config.py  database.py  models.py  requirements.txt  settings.py  urls.py  wsgi.py
scripts/: create_test_user.py
ta-lib/: Makefile  config.status  libtool
templates/: analysis_dashboard.html  auto_trading.html  dashboard.html  index.html  strategy_dashboard.html  tesla_analysis.html  trading.html  volatile_stocks.html
tests/: config_test.py  conftest.py  test_alpha_vantage.py  test_analysis_routes.py  test_api.py  test_auth.py  test_blueprints.py  test_db.py  test_frontend.py  test_index.py  (+3 more)
(+320 files in other folders)
