[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "schwab_trader"
version = "0.1"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A trading application for Schwab API"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/schwab_trader"
"Bug Tracker" = "https://github.com/yourusername/schwab_trader/issues" 